--- a/apps/drec-api-client/package.json
+++ b/apps/drec-api-client/package.json
@@ -25,7 +25,7 @@
     "author": "EnergyWeb DevHub GmbH; Florin Georgescu, florin.georgescu@energyweb.org",
     "license": "GPL-3.0-or-later",
     "files": [
-        "dist/js"
+        "dist"
     ],
     "dependencies": {
         "axios": "0.21.1"
