--- a/apps/drec-api-client/tsconfig.json
+++ b/apps/drec-api-client/tsconfig.json
@@ -5,7 +5,7 @@
         "removeComments": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "target": "es2019",
+        "target": "es2015",
         "sourceMap": true,
         "outDir": "./dist/js",
         "baseUrl": "./",
@@ -13,8 +13,9 @@
         "moduleResolution": "node",
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "composite": true
+        "composite": true,
+        "types": ["node", "mocha"]
     },
-    "include": ["src/**/*"],
+    "include": ["src/index.ts", "src/client/*", "src/response-type.ts"],
     "exclude": ["node_modules", "dist"]
 }
