--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -7,16 +7,16 @@
   "author": "EnergyWeb DevHub GmbH; Florin Georgescu, florin.georgescu@energyweb.org",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "prebuild": "rimraf dist",
+    "start": "nest start -p tsconfig.json",
+    "start:dev": "yarn migrate && nest start --watch -p tsconfig.json",
+    "start:debug": "nest start --debug --watch -p tsconfig.json",
+    "start:prod": "node dist/js/src/main",
+    "prebuild": "shx rm -rf dist",
     "build": "yarn build:ts",
     "build:ts": "tsc -b tsconfig.json",
     "build:containers": "make build",
     "clean": "shx rm -rf dist",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
     "prettier": "prettier --write --config-precedence file-override './src/**/*'",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint-fix": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
