Fixed drec-api build

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -51,6 +51,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "jest": "^25.1.0",
+    "shx": "0.3.3",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
