--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -8,7 +8,7 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "start": "nest start -p tsconfig.json",
-    "start:dev": "yarn migrate && nest start --watch -p tsconfig.json",
+    "start:dev": "nest start --watch -p tsconfig.json",
     "start:debug": "nest start --debug --watch -p tsconfig.json",
     "start:prod": "node dist/js/src/main",
     "prebuild": "shx rm -rf dist",
