--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -30,9 +30,34 @@
     "drec-backend": "./bin/drec-api"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/common": "7.6.13",
+    "@nestjs/config": "0.6.3",
+    "@nestjs/core": "7.6.13",
+    "@nestjs/cqrs": "7.0.1",
+    "@nestjs/jwt": "7.2.0",
+    "@nestjs/passport": "7.1.5",
+    "@nestjs/schedule": "0.4.2",
+    "@nestjs/swagger": "4.7.15",
+    "@nestjs/typeorm": "7.1.5",
+    "@nestjs/platform-express": "7.6.13",
+    "axios": "0.21.1",
+    "bcryptjs": "2.4.3",
+    "class-validator": "0.13.1",
+    "class-transformer": "0.3.1",
+    "concurrently": "5.3.0",
+    "ethers": "5.0.31",
+    "ganache-cli": "6.12.2",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
+    "pg": "8.5.1",
+    "pkcs7-padding": "0.1.1",
+    "rijndael-js": "2.0.0",
+    "swagger-ui-express": "4.1.6",
+    "typeorm": "0.2.31",
+    "dotenv": "8.2.0",
+    "moment": "2.29.1",
+    "qs": "6.9.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
