Added users and organization migrations and implementation

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,13 @@ WEB3=http://localhost:8545
 
 DEBUG_API_KEY=debug
 
+# --- DATABASE --- #
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=origin_drec
+
 # --- DREC INTEGRATION --- #
 DREC_API_KEY=apikey
 
