--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -63,7 +63,7 @@
     "class-validator": "0.13.1",
     "class-transformer": "0.3.1",
     "concurrently": "5.3.0",
-    "ethers": "5.0.31",
+    "ethers": "5.3.0",
     "ganache-cli": "6.12.2",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
@@ -76,32 +76,43 @@
     "dotenv": "8.2.0",
     "moment": "2.29.1",
     "qs": "6.9.6",
+    "lodash": "4.17.21",
+    "luxon": "1.27.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@nestjs/cli": "7.5.4",
+    "@nestjs/testing": "7.6.5",
+    "@types/bcryptjs": "2.4.2",
+    "@types/bull": "3.15.1",
+    "@types/chai": "4.2.18",
     "@types/express": "4.17.9",
-    "@types/jest": "25.1.4",
-    "@types/node": "^13.9.1",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "^25.1.0",
+    "@types/jest": "26.0.19",
+    "@types/lodash": "4.14.168",
+    "@types/luxon": "1.26.5",
+    "@types/mocha": "8.2.0",
+    "@types/node": "14.14.11",
+    "@types/nodemailer": "^6.4.2",
+    "@types/passport-jwt": "3.0.3",
+    "@types/passport-local": "1.0.33",
+    "@types/supertest": "2.0.10",
+    "@typescript-eslint/eslint-plugin": "3.10.1",
+    "@typescript-eslint/parser": "3.10.1",
+    "chai": "4.2.0",
+    "eslint": "7.15.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-prettier": "7.0.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-prettier": "3.2.0",
+    "jest": "26.6.0",
+    "mocha": "8.2.1",
     "shx": "0.3.3",
-    "prettier": "^1.19.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "25.2.1",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "supertest": "6.0.1",
+    "ts-node": "9.1.0",
+    "typescript": "4.1.3",
+    "wait-on": "5.2.1"
   },
   "jest": {
     "moduleFileExtensions": [
