Fixed api client build

--- a/apps/drec-api-client/package.json
+++ b/apps/drec-api-client/package.json
@@ -24,7 +24,8 @@
     "author": "EnergyWeb DevHub GmbH; Florin Georgescu, florin.georgescu@energyweb.org",
     "license": "GPL-3.0-or-later",
     "dependencies": {
-        "axios": "0.21.1"
+        "axios": "0.21.1",
+        "react-query": "3.15.1"
     },
     "devDependencies": {
         "@energyweb/origin-drec-api": "0.0.1",
