Changed DB name to origin in example and readme

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_DATABASE=origin_drec
+DB_DATABASE=origin
 
 # --- BLOCKCHAIN --- #
 MNEMONIC="stone eyebrow bronze glide upon subject camera cushion rice outside swing casual"
