--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -75,12 +75,14 @@
     "typeorm": "0.2.31",
     "dotenv": "8.2.0",
     "moment": "2.29.1",
+    "multer": "1.4.2",
     "qs": "6.9.6",
     "lodash": "4.17.21",
     "luxon": "1.27.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.4",
@@ -92,12 +94,14 @@
     "@types/jest": "26.0.19",
     "@types/lodash": "4.14.168",
     "@types/luxon": "1.26.5",
+    "@types/multer": "1.4.6",
     "@types/mocha": "8.2.0",
     "@types/node": "14.14.11",
     "@types/nodemailer": "^6.4.2",
     "@types/passport-jwt": "3.0.3",
     "@types/passport-local": "1.0.33",
     "@types/supertest": "2.0.10",
+    "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "@typescript-eslint/parser": "3.10.1",
     "chai": "4.2.0",
