--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -62,7 +62,7 @@
     "bcryptjs": "2.4.3",
     "class-validator": "0.13.1",
     "class-transformer": "0.3.1",
-    "clean-deep": "^3.4.0",
+    "clean-deep": "3.4.0",
     "concurrently": "5.3.0",
     "ethers": "5.3.1",
     "ganache-cli": "6.12.2",
