Checking for device group ownership before performing changes

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ WEB3=http://localhost:8545
 
 DEBUG_API_KEY=debug
 
+BACKEND_PORT=3040
+JWT_SECRET=thisisnotsecret
+JWT_EXPIRY_TIME="7 days"
+
 # --- DATABASE --- #
 DB_HOST=localhost
 DB_PORT=5432
