Added env variables for device grouping

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=origin
 
+# --- AUTH ---
+JWT_SECRET=thisisnotsecret
+JWT_EXPIRY_TIME="7 days"
+
 # --- BLOCKCHAIN --- #
 MNEMONIC="stone eyebrow bronze glide upon subject camera cushion rice outside swing casual"
 
@@ -36,3 +40,7 @@ CERTIFICATE_QUEUE_DELAY=
 
 # Redis
 REDIS_URL=
+
+# Device grouping rules
+DEVICE_GROUP_RULE_1='registrant_organisation_code'
+DEVICE_GROUP_RULE_2='country_code'
