--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -55,7 +55,7 @@
     "@nestjs/cqrs": "7.0.1",
     "@nestjs/jwt": "7.2.0",
     "@nestjs/passport": "7.1.5",
-    "@nestjs/schedule": "~1.0.1",
+    "@nestjs/schedule": "1.0.1",
     "@nestjs/swagger": "4.7.15",
     "@nestjs/typeorm": "7.1.5",
     "@nestjs/platform-express": "7.6.13",
@@ -91,7 +91,7 @@
     "@types/bcryptjs": "2.4.2",
     "@types/bull": "3.15.1",
     "@types/chai": "4.2.18",
-    "@types/cron": "~1.7.3",
+    "@types/cron": "1.7.3",
     "@types/express": "4.17.9",
     "@types/jest": "26.0.19",
     "@types/lodash": "4.14.168",
