chore(drec-ui) initial ui setup

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,18 @@ WEB3=http://localhost:8545
 
 DEBUG_API_KEY=debug
 
+BACKEND_PORT=3040
+
 # --- DATABASE --- #
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=origin
+
+# --- AUTH ---
+JWT_SECRET=thisisnotsecret
+JWT_EXPIRY_TIME="7 days"
 
 # --- BLOCKCHAIN --- #
 MNEMONIC="stone eyebrow bronze glide upon subject camera cushion rice outside swing casual"
@@ -34,3 +40,7 @@ CERTIFICATE_QUEUE_DELAY=
 
 # Redis
 REDIS_URL=
+
+# Device grouping rules
+DEVICE_GROUP_RULE_1='registrant_organisation_code'
+DEVICE_GROUP_RULE_2='country_code'
