--- a/apps/drec-ui/tsconfig.json
+++ b/apps/drec-ui/tsconfig.json
@@ -18,7 +18,7 @@
         "resolveJsonModule": true,
         "importHelpers": true,
         "isolatedModules": true,
-        "strictNullChecks": false,
+        "strictNullChecks": true,
         "noEmit": true,
         "jsx": "react-jsx",
         "types": ["node", "jest"]
