--- a/apps/drec-ui/.eslintrc
+++ b/apps/drec-ui/.eslintrc
@@ -5,7 +5,8 @@
             "files": ["**/*.ts?(x)"],
             "rules": {
                 "no-unused-vars": "off",
-                "@typescript-eslint/no-unused-vars": "off"
+                "@typescript-eslint/no-unused-vars": "off",
+                "react-hooks/exhaustive-deps": "off"
             }
         }
     ]
