--- a/apps/drec-ui/package.json
+++ b/apps/drec-ui/package.json
@@ -33,6 +33,7 @@
         "lodash": "4.17.21",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-error-boundary": "3.1.1",
         "react-hook-form": "^7.0.4",
         "react-query": "3.15.1",
         "react-router": "^6.0.0-beta.0",
@@ -46,7 +47,6 @@
         "@energyweb/utils-general": "11.0.3-alpha.1626693085.0",
         "react-toastify": "7.0.4",
         "tslib": "2.3.1",
-
         "react-material-ui-carousel": "2.2.7",
         "@react-google-maps/api": "2.2.0",
         "react-dropzone": "11.3.4"
