chore(drec-api) update user and org

--- a/.env.example
+++ b/.env.example
@@ -42,5 +42,5 @@ CERTIFICATE_QUEUE_DELAY=
 REDIS_URL=
 
 # Device grouping rules
-DEVICE_GROUP_RULE_1='registrant_organisation_code'
-DEVICE_GROUP_RULE_2='country_code'
+DEVICE_GROUP_RULE_1='organizationId'
+DEVICE_GROUP_RULE_2='countryCode'
