--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,8 +40,8 @@ jobs:
                     POSTGRES_PASSWORD: postgres
                     JWT_SECRET: thisisnotsecret
                     JWT_EXPIRY_TIME: '7 days'
-                    DEVICE_GROUP_RULE_1: 'registrant_organisation_code'
-                    DEVICE_GROUP_RULE_2: 'country_code'
+                    DEVICE_GROUP_RULE_1: 'organizationId'
+                    DEVICE_GROUP_RULE_2: 'countryCode'
                 # Set health checks to wait until postgres has started
                 options: >-
                     --health-cmd pg_isready
