feat(drec-api) org invitation & user confirm email & mail service

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,11 @@ REDIS_URL=
 # Device grouping rules
 DEVICE_GROUP_RULE_1='organizationId'
 DEVICE_GROUP_RULE_2='countryCode'
+
+# --- MAIL CONFIG ---
+SMTP_HOST=
+SMTP_PORT=
+SMTP_LOGIN=
+SMTP_PASSWORD=
+EMAIL_FROM_NAME=
+EMAIL_FROM=no-reply@example.com
