feat(drec-api) admin module

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -20,8 +20,8 @@
     "redis:drop": "redis-cli flushall",
     "deploy:heroku": "make -B build deploy-heroku",
     "prettier": "prettier --write --config-precedence file-override './src/**/*'",
-    "lint": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" --no-error-on-unmatched-pattern",
-    "lint-fix": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
+    "lint": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --no-error-on-unmatched-pattern",
+    "lint:fix": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
     "migrate": "yarn typeorm:run:issuer && yarn typeorm:run",
     "migrate:docker": "yarn typeorm:run:issuer && node_modules/typeorm/cli.js --config dist/js/ormconfig.js migration:run",
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --config ormconfig-dev.ts",
