--- a/.env.example
+++ b/.env.example
@@ -54,4 +54,4 @@ EMAIL_FROM_NAME=
 EMAIL_FROM=no-reply@example.com
 
 # ------- OPTIONAL ------- #
-GOOGLE_MAPS_API_KEY=<API_KEY>
+REACT_APP_GOOGLE_MAPS_API_KEY=<API_KEY>
