--- a/apps/drec-ui/package.json
+++ b/apps/drec-ui/package.json
@@ -29,10 +29,12 @@
         "@svgr/webpack": "5.5.0",
         "babel-loader": "8.1.0",
         "dayjs": "^1.10.4",
+        "chart.js": "3.3.2",
         "ethers": "5.3.1",
         "history": "^5.0.0-beta.9",
         "lodash": "4.17.21",
         "react": "^17.0.2",
+        "react-chartjs-2": "3.0.3",
         "react-dom": "^17.0.2",
         "react-error-boundary": "3.1.1",
         "react-hook-form": "7.1.0",
