--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 MODE=dev
 WEB3=http://localhost:8545
+UI_BASE_URL=http://localhost:3000
 
 DEBUG_API_KEY=debug
 
@@ -34,6 +35,8 @@ INFLUXDB_USER_PASSWORD=secretpassword
 
 # UI variables
 REACT_APP_BACKEND_URL=http://localhost:3040
+# ------- OPTIONAL ------- #
+REACT_APP_GOOGLE_MAPS_API_KEY=<API_KEY>
 
 # Delay (in ms) between processing blockchain commands (issue, claim, transfer)
 CERTIFICATE_QUEUE_DELAY=
@@ -52,6 +55,3 @@ SMTP_LOGIN=
 SMTP_PASSWORD=
 EMAIL_FROM_NAME=
 EMAIL_FROM=no-reply@example.com
-
-# ------- OPTIONAL ------- #
-REACT_APP_GOOGLE_MAPS_API_KEY=<API_KEY>
