--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,7 @@ INFLUXDB_USER_PASSWORD=secretpassword
 REACT_APP_BACKEND_URL=http://localhost:3040
 # ------- OPTIONAL ------- #
 REACT_APP_GOOGLE_MAPS_API_KEY=<API_KEY>
+REACT_APP_REGISTRATION_MESSAGE_TO_SIGN=
 
 # Delay (in ms) between processing blockchain commands (issue, claim, transfer)
 CERTIFICATE_QUEUE_DELAY=
