--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,8 @@ REACT_APP_BACKEND_URL=http://localhost:3040
 # ------- OPTIONAL ------- #
 REACT_APP_GOOGLE_MAPS_API_KEY=<API_KEY>
 REACT_APP_REGISTRATION_MESSAGE_TO_SIGN=
+# Supported networkd ID's used by Metamask, separating them by a semicolon ';'
+REACT_APP_SUPPORTED_NETWORK_IDS=1337;73799;246
 
 # Delay (in ms) between processing blockchain commands (issue, claim, transfer)
 CERTIFICATE_QUEUE_DELAY=
