--- a/apps/drec-ui/package.json
+++ b/apps/drec-ui/package.json
@@ -31,6 +31,7 @@
         "dayjs": "^1.10.4",
         "chart.js": "3.3.2",
         "ethers": "5.3.1",
+        "@ethersproject/providers": "5.3.1",
         "history": "^5.0.0-beta.9",
         "lodash": "4.17.21",
         "react": "^17.0.2",
@@ -55,6 +56,8 @@
         "react-dropzone": "11.3.4",
         "@energyweb/origin-ui-theme": "0.0.1-alpha.1",
         "react-beautiful-dnd": "13.1.0",
+        "@web3-react/core": "6.1.9",
+        "@web3-react/injected-connector": "6.0.7",
         "@energyweb/origin-ui-utils": "0.0.2-beta.0",
         "@energyweb/origin-ui-assets": "0.0.1-alpha.1",
         "@energyweb/origin-ui-core": "2.0.0-alpha.5"
