chore(drec-ui) removed console.logs

--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,7 @@ INFLUXDB_USER_PASSWORD=secretpassword
 REACT_APP_BACKEND_URL=http://localhost:3040
 # ------- OPTIONAL ------- #
 REACT_APP_GOOGLE_MAPS_API_KEY=<API_KEY>
-REACT_APP_REGISTRATION_MESSAGE_TO_SIGN=
+REACT_APP_REGISTRATION_MESSAGE_TO_SIGN='I register as D-REC Origin user'
 # Supported networkd ID's used by Metamask, separating them by a semicolon ';'
 REACT_APP_SUPPORTED_NETWORK_IDS=1337;73799;246
 
