--- a/apps/drec-api-client/package.json
+++ b/apps/drec-api-client/package.json
@@ -7,10 +7,11 @@
     "scripts": {
         "build": "yarn clean && yarn build:ts",
         "build:ts": "yarn build:client && tsc -b tsconfig.json",
-        "build:client": "yarn client:generate:schema && yarn client:generate",
+        "build:client": "yarn client:generate:schema && yarn client:generate && yarn client:post-generation",
         "clean": "rm -rf dist dist-shakeable && yarn client:clean",
         "client:generate": "rm -rf src/client && orval && barrelsby -d src/client",
         "client:generate:schema": "ts-node src/generateSchema.ts",
+        "client:post-generation": "ts-node src/postGeneration.ts",
         "client:clean": "rm -rf src/client src/schema.yaml"
     },
     "homepage": "https://github.com/energywebfoundation/drec-origin/tree/master/apps/drec-api-client#readme",
