--- a/apps/drec-ui/package.json
+++ b/apps/drec-ui/package.json
@@ -60,7 +60,8 @@
         "@web3-react/injected-connector": "6.0.7",
         "@energyweb/origin-ui-utils": "0.0.2-beta.0",
         "@energyweb/origin-ui-assets": "0.0.1-alpha.1",
-        "@energyweb/origin-ui-core": "2.0.0-alpha.5"
+        "@energyweb/origin-ui-core": "2.0.0-alpha.5",
+        "@energyweb/issuer": "4.0.0-alpha.1630476459.0"
     },
     "devDependencies": {
         "@storybook/addon-actions": "^6.2.9",
