--- a/apps/drec-api-client/package.json
+++ b/apps/drec-api-client/package.json
@@ -40,7 +40,7 @@
         "prettier": "2.1.2",
         "ts-node": "9.1.0",
         "typescript": "4.1.3",
-        "orval": "5.0.0-alpha.9",
+        "orval": "5.5.9",
         "barrelsby": "2.2.0"
     },
     "files": [
