feature(drec-ui) updated version and added approve operator function

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ JWT_EXPIRY_TIME="7 days"
 
 # --- BLOCKCHAIN --- #
 MNEMONIC="stone eyebrow bronze glide upon subject camera cushion rice outside swing casual"
+REACT_APP_MNEMONIC="stone eyebrow bronze glide upon subject camera cushion rice outside swing casual"
 
 # --- SMART METER READINGS --- #
 INFLUXDB_URL=http://localhost:8086
