--- a/apps/drec-ui/package.json
+++ b/apps/drec-ui/package.json
@@ -18,14 +18,15 @@
         "deploy:heroku": "make -B build deploy-heroku"
     },
     "dependencies": {
-        "@emotion/react": "11.1.5",
+        "@emotion/react": "11.4.1",
         "@emotion/styled": "11.3.0",
         "emotion-theming": "11.0.0",
         "@energyweb/origin-drec-api-client": "0.0.1",
         "@hookform/resolvers": "2.3.0",
-        "@material-ui/core": "5.0.0-alpha.32",
-        "@material-ui/icons": "5.0.0-alpha.29",
-        "@material-ui/lab": "5.0.0-alpha.32",
+        "@material-ui/core": "5.0.0-beta.4",
+        "@material-ui/icons": "5.0.0-beta.4",
+        "@material-ui/lab": "5.0.0-alpha.43",
+        "@material-ui/styles": "5.0.0-beta.4",
         "@svgr/webpack": "5.5.0",
         "babel-loader": "8.1.0",
         "dayjs": "^1.10.4",
@@ -39,29 +40,30 @@
         "react-dom": "^17.0.2",
         "react-error-boundary": "3.1.1",
         "react-hook-form": "7.1.0",
-        "react-query": "3.15.1",
-        "react-router": "6.0.0-beta.0",
-        "react-router-dom": "6.0.0-beta.0",
+        "react-query": "3.23.2",
+        "react-router": "6.0.0-beta.4",
+        "react-router-dom": "6.0.0-beta.4",
+        "react-toastify": "8.0.2",
+        "react-use": "17.3.1",
         "react-scripts": "4.0.3",
         "web-vitals": "^1.0.1",
-        "yup": "^0.32.9",
-        "axios": "0.21.1",
+        "yup": "0.32.9",
+        "axios": "0.21.4",
         "mobx": "^6.1.8",
         "mobx-react-lite": "^3.2.0",
-        "@energyweb/utils-general": "11.0.3-alpha.1629978728.0",
-        "react-toastify": "7.0.4",
+        "@energyweb/utils-general": "11.0.4",
         "tslib": "2.3.1",
         "react-material-ui-carousel": "2.2.7",
         "@react-google-maps/api": "2.2.0",
         "react-dropzone": "11.3.4",
-        "@energyweb/origin-ui-theme": "0.0.1-alpha.1",
+        "@energyweb/origin-ui-theme": "0.1.0",
         "react-beautiful-dnd": "13.1.0",
         "@web3-react/core": "6.1.9",
         "@web3-react/injected-connector": "6.0.7",
-        "@energyweb/origin-ui-utils": "0.0.2-beta.0",
-        "@energyweb/origin-ui-assets": "0.0.1-alpha.1",
-        "@energyweb/origin-ui-core": "2.0.0-alpha.5",
-        "@energyweb/issuer": "4.0.0-alpha.1630476459.0"
+        "@energyweb/origin-ui-utils": "0.1.0",
+        "@energyweb/origin-ui-assets": "0.1.0",
+        "@energyweb/origin-ui-core": "2.0.0",
+        "@energyweb/issuer": "4.1.1-alpha.1631878057.0"
     },
     "devDependencies": {
         "@storybook/addon-actions": "^6.2.9",
@@ -77,9 +79,9 @@
         "@types/jest": "26.0.19",
         "@types/lodash": "4.14.168",
         "@types/node": "14.14.11",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "@types/react-router-dom": "^5.1.7",
+        "@types/react": "17.0.20",
+        "@types/react-dom": "17.0.9",
+        "@types/react-router-dom": "5.1.8",
         "@types/testing-library__jest-dom": "5.9.5",
         "@types/yup": "^0.29.11",
         "webpack": "4.44.2"
