--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -42,13 +42,13 @@
   },
   "dependencies": {
     "@energyweb/energy-api-influxdb": "0.8.0",
-    "@energyweb/issuer": "4.0.0-alpha.1630476459.0",
-    "@energyweb/issuer-api": "0.2.1-alpha.1629978728.0",
+    "@energyweb/issuer": "4.1.1-alpha.1631878057.0",
+    "@energyweb/issuer-api": "0.4.0",
     "@energyweb/origin-247-certificate": "2.0.1",
-    "@energyweb/origin-backend": "10.0.2-alpha.1629978728.0",
-    "@energyweb/origin-backend-core": "8.0.2-alpha.1629978728.0",
-    "@energyweb/origin-backend-utils": "1.5.2-alpha.1629978728.0",
-    "@energyweb/utils-general": "11.0.3-alpha.1629978728.0",
+    "@energyweb/origin-backend": "11.0.1",
+    "@energyweb/origin-backend-core": "8.0.3",
+    "@energyweb/origin-backend-utils": "1.6.1",
+    "@energyweb/utils-general": "11.0.4",
     "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/common": "7.6.13",
     "@nestjs/config": "0.6.3",
