chore(drec-ui): adjust operator approval blockchain interactions, edit app styles

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,6 @@ JWT_EXPIRY_TIME="7 days"
 
 # --- BLOCKCHAIN --- #
 MNEMONIC="stone eyebrow bronze glide upon subject camera cushion rice outside swing casual"
-REACT_APP_MNEMONIC="stone eyebrow bronze glide upon subject camera cushion rice outside swing casual"
 
 # --- SMART METER READINGS --- #
 INFLUXDB_URL=http://localhost:8086
@@ -36,11 +35,12 @@ INFLUXDB_USER_PASSWORD=secretpassword
 
 # UI variables
 REACT_APP_BACKEND_URL=http://localhost:3040
+REACT_APP_ISSUER_ADDRESS=0x28130b5603cfcd597862a1F6786Ab430Ddc2B92F
+# Supported networkd ID's used by Metamask, separating them by a semicolon ';'
+REACT_APP_SUPPORTED_NETWORK_IDS=1337;73799;246
 # ------- OPTIONAL ------- #
 REACT_APP_GOOGLE_MAPS_API_KEY=<API_KEY>
 REACT_APP_REGISTRATION_MESSAGE_TO_SIGN='I register as D-REC Origin user'
-# Supported networkd ID's used by Metamask, separating them by a semicolon ';'
-REACT_APP_SUPPORTED_NETWORK_IDS=1337;73799;246
 
 # Delay (in ms) between processing blockchain commands (issue, claim, transfer)
 CERTIFICATE_QUEUE_DELAY=
