chore(drec-ui): adjust operator approval block styling

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ JWT_SECRET=thisisnotsecret
 JWT_EXPIRY_TIME="7 days"
 
 # --- BLOCKCHAIN --- #
+ISSUER_ADDRESS=0x28130b5603cfcd597862a1F6786Ab430Ddc2B92F
 MNEMONIC="stone eyebrow bronze glide upon subject camera cushion rice outside swing casual"
 
 # --- SMART METER READINGS --- #
