--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -35,7 +35,7 @@
     "test:e2e:mocha": "mocha -r ts-node/register test/*.e2e-spec.ts --timeout 60000 --exit",
     "test:e2e": "concurrently --success first --kill-others -n eth,test \"yarn run:ganache\" \"wait-on tcp:8545 && yarn typeorm:drop && yarn migrate && yarn test:e2e:mocha\"",
     "test:e2e:single": "sh ./scripts/test-e2e-single.sh",
-    "run:ganache": "ganache-cli -m 'stone eyebrow bronze glide upon subject camera cushion rice outside swing casual' -l 8000000 -e 1000000 -a 20"
+    "run:ganache": "ganache-cli -q -m 'stone eyebrow bronze glide upon subject camera cushion rice outside swing casual' -l 8000000 -e 1000000 -a 20"
   },
   "bin": {
     "drec-backend": "./bin/drec-api"
