--- a/apps/drec-ui/package.json
+++ b/apps/drec-ui/package.json
@@ -31,6 +31,7 @@
         "babel-loader": "8.1.0",
         "dayjs": "^1.10.4",
         "chart.js": "3.3.2",
+        "clean-deep": "3.4.0",
         "ethers": "5.3.1",
         "@ethersproject/providers": "5.3.1",
         "history": "^5.0.0-beta.9",
