feat(drec-api) Cron for storring BBOX reads

--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,9 @@ EMAIL_FROM_NAME=
 EMAIL_FROM=no-reply@example.com
 
 REGISTRATION_MESSAGE_TO_SIGN='I register as D-REC Origin user'
+
+# BBOX connection data
+BBOX_USERNAME=
+BBOX_PASSWORD=
+BBOX_SERVER=
+BBOX_AUTH_SERVER=
