--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -84,10 +84,12 @@
     "reflect-metadata": "^0.1.13",
     "rijndael-js": "2.0.0",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
+    "rxjs": "6.6.7",
     "swagger-ui-express": "4.1.6",
     "typeorm": "0.2.31",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "@nestjs/axios": "~0.0.3",
+    "form-data": "~4.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.4",
