fix(drec-ui) fixed energy formatter watts to mw

--- a/apps/drec-ui/package.json
+++ b/apps/drec-ui/package.json
@@ -34,6 +34,9 @@
         "clean-deep": "3.4.0",
         "ethers": "5.3.1",
         "@ethersproject/providers": "5.3.1",
+        "@ethersproject/bignumber": "5.3.0",
+        "@ethersproject/address": "5.3.0",
+        "@ethersproject/units": "5.3.0",
         "history": "^5.0.0-beta.9",
         "lodash": "4.17.21",
         "react": "^17.0.2",
