--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,8 @@ REACT_APP_BACKEND_URL=http://localhost:3040
 REACT_APP_ISSUER_ADDRESS=0x28130b5603cfcd597862a1F6786Ab430Ddc2B92F
 # Supported networkd ID's used by Metamask, separating them by a semicolon ';'
 REACT_APP_SUPPORTED_NETWORK_IDS=1337;73799;246
+REACT_APP_BLOCKCHAIN_EXPLORER_URL=https://volta-explorer.energyweb.org
+
 # ------- OPTIONAL ------- #
 REACT_APP_GOOGLE_MAPS_API_KEY=<API_KEY>
 REACT_APP_REGISTRATION_MESSAGE_TO_SIGN='I register as D-REC Origin user'
