chore(drec-readme) updated readme

--- a/.env.example
+++ b/.env.example
@@ -59,16 +59,12 @@ CERTIFICATE_QUEUE_DELAY=
 # Redis URL
 REDIS_URL=
 
-# Device grouping rules
-DEVICE_GROUP_RULE_1='organizationId'
-DEVICE_GROUP_RULE_2='countryCode'
-
 # --- MAIL CONFIG ---
-SMTP_HOST=
-SMTP_PORT=
-SMTP_LOGIN=
-SMTP_PASSWORD=
-EMAIL_FROM_NAME=
+SMTP_HOST='smtp.gmail.com'
+SMTP_PORT=587
+SMTP_LOGIN='247-demo@energyweb.org'
+SMTP_PASSWORD=klihqluatsokhxku
+EMAIL_FROM_NAME=Energy Web Origin
 EMAIL_FROM=no-reply@example.com
 
 REGISTRATION_MESSAGE_TO_SIGN='I register as D-REC Origin user'
