feat(drec-api) admin seed endpoints and added bbox integrator

--- a/integrators-scripts/.env.example
+++ b/integrators-scripts/.env.example
@@ -14,3 +14,6 @@ NSR_PASSWORD="NSR123"
 
 CANDI_USERNAME="gianni@candi.solar"
 CANDI_PASSWORD="CANDI123"
+
+BBOX_USERNAME="bboxx-device-owner@mailinator.com"
+BBOX__PASSWORD="Bboxx123"
