chore(integrators-scripts) updated variable name

--- a/integrators-scripts/.env.example
+++ b/integrators-scripts/.env.example
@@ -16,4 +16,4 @@ CANDI_USERNAME="gianni@candi.solar"
 CANDI_PASSWORD="CANDI123"
 
 BBOX_USERNAME="bboxx-device-owner@mailinator.com"
-BBOX__PASSWORD="Bboxx123"
+BBOX_PASSWORD="Bboxx123"
