--- a/.env.example
+++ b/.env.example
@@ -44,7 +44,7 @@ INFLUXDB_USER_PASSWORD=secretpassword
 
 # URL of backend to use for frontend app
 REACT_APP_BACKEND_URL=http://localhost:3040
-REACT_APP_ISSUER_ADDRESS=0x28130b5603cfcd597862a1F6786Ab430Ddc2B92F
+REACT_APP_ISSUER_ADDRESS=0x28130b5603cfcd597862a1F6786AbFEgrr645430Ddc2B92F
 # Supported networkd ID's used by Metamask, separating them by a semicolon ';'
 REACT_APP_SUPPORTED_NETWORK_IDS=1337;73799;246
 REACT_APP_BLOCKCHAIN_EXPLORER_URL=https://volta-explorer.energyweb.org
@@ -63,7 +63,7 @@ REDIS_URL=
 SMTP_HOST='smtp.gmail.com'
 SMTP_PORT=587
 SMTP_LOGIN='247-demo@energyweb.org'
-SMTP_PASSWORD=klihqluatsokhxku
+SMTP_PASSWORD=****************
 EMAIL_FROM_NAME=Energy Web Origin
 EMAIL_FROM=no-reply@example.com
 
