--- a/integrators-scripts/.env.example
+++ b/integrators-scripts/.env.example
@@ -1,19 +1,19 @@
 DREC_BACKEND_URL="http://localhost:3040/api"
 
-OKRA_USERNAME="markus@okrasolar.com"
-OKRA_PASSWORD="Okra123"
+OKRA_USERNAME="markus@example.com"
+OKRA_PASSWORD="123"
 
-ENGIE_USERNAME="stefan.zelazny@engie.com"
-ENGIE_PASSWORD="Engie123"
+ENGIE_USERNAME="stefan.zelazny@example.com"
+ENGIE_PASSWORD="123"
 
-DE_USERNAME="josephys@de.energy"
-DE_PASSWORD="DEE123"
+DE_USERNAME="josephys@example.energy"
+DE_PASSWORD="123"
 
-NSR_USERNAME="susana.a@newsunroad.com"
-NSR_PASSWORD="NSR123"
+NSR_USERNAME="susana.a@example.com"
+NSR_PASSWORD="123"
 
-CANDI_USERNAME="gianni@candi.solar"
-CANDI_PASSWORD="CANDI123"
+CANDI_USERNAME="gianni@example.solar"
+CANDI_PASSWORD="123"
 
-BBOX_USERNAME="bboxx-device-owner@mailinator.com"
-BBOX_PASSWORD="Bboxx123"
+BBOX_USERNAME="bboxx-device-owner@example.com"
+BBOX_PASSWORD="123"
