--- a/apps/drec-api/tsconfig-backup.json
+++ b/apps/drec-api/tsconfig-backup.json
@@ -15,11 +15,10 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["jest", "node", "mocha"],
-    "typeRoots": ["../node_modules/@types"],
+    "types": ["jest", "node"],
     "resolveJsonModule": true,
     "preserveWatchOutput": true
   },
-  "include": ["src/**/*", "migrations/*", "ormconfig*.ts"],
-  "exclude": ["node_modules", "dist", ".spec.ts"]
+  "include": ["src/**/*", "test/**/*", "migrations/*", "ormconfig*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
