--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -94,7 +94,8 @@
     "stream": "^0.0.2",
     "swagger-ui-express": "4.1.6",
     "typeorm": "0.2.31",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "csvtojson": "2.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.4",
