--- a/apps/drec-api/tsconfig.json
+++ b/apps/drec-api/tsconfig.json
@@ -5,8 +5,8 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "./dist/js",
