--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -96,7 +96,8 @@
     "typeorm": "0.2.31",
     "uuid": "8.3.2",
 	"@influxdata/influxdb-client": "1.9.0",
-    "csvtojson": "2.0.1"
+    "csvtojson": "2.0.1",
+    "moment":"2.29.4"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.4",
