--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,11 @@ jspm_packages/
 # dotenv environment variables file
 .env
 .env.example
+.env-new
+.env-prod
+.env-dev
+.env-stage
+.env.local
 # next.js build output
 .next
 
@@ -81,6 +86,7 @@ common/deploy/
 common/temp/
 common/autoinstallers/*/.npmrc
 **/.rush/temp/
+common/config/rush/pnpm-lock.yaml
 
 # IDE files
 .vscode
