--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -98,7 +98,8 @@
     "stream": "^0.0.2",
     "swagger-ui-express": "4.1.6",
     "typeorm": "0.2.31",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "moment-timezone": "0.5.40"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.4",
