--- a/apps/drec-ui/package.json
+++ b/apps/drec-ui/package.json
@@ -50,6 +50,7 @@
         "react-toastify": "8.1.0",
         "react-use": "17.3.1",
         "react-scripts": "4.0.3",
+        "webpack-dev-server": "3.11.1",
         "web-vitals": "^1.0.1",
         "yup": "0.32.11",
         "axios": "0.21.4",
