--- a/apps/drec-angular-ui/package.json
+++ b/apps/drec-angular-ui/package.json
@@ -23,7 +23,8 @@
     "@angular/router": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "ngx-toastr":"16.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.3",
