--- a/apps/drec-angular-ui/package.json
+++ b/apps/drec-angular-ui/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@energyweb/origin-drec-angular-ui",
-  "version": "0.0.1",
+  "name": "my-angular-material",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:dev": "ng serve",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -23,8 +22,7 @@
     "@angular/router": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "ngx-toastr": "16.0.1"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.3",
