--- a/apps/drec-angular-ui/angular.json
+++ b/apps/drec-angular-ui/angular.json
@@ -32,7 +32,8 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+            "@angular/material/prebuilt-themes/indigo-pink.css",
+            "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css"
             ],
