--- a/apps/drec-angular-ui/package.json
+++ b/apps/drec-angular-ui/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^9.0.0",
+    "@angular-material-components/moment-adapter": "^9.0.0",
     "@angular/animations": "^15.0.0",
     "@angular/cdk": "^15.0.2",
     "@angular/common": "^15.0.0",
@@ -17,6 +19,7 @@
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.0.2",
+    "@angular/material-moment-adapter": "^15.0.3",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
