--- a/apps/drec-angular-ui/package.json
+++ b/apps/drec-angular-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-angular-material",
+  "name": "@energyweb/origin-drec-angular-ui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
