--- a/apps/drec-angular-ui/tsconfig.json
+++ b/apps/drec-angular-ui/tsconfig.json
@@ -14,10 +14,12 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": false,
     "strictPropertyInitialization": false,
     "lib": [
