--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -99,7 +99,8 @@
     "swagger-ui-express": "4.1.6",
     "typeorm": "0.2.31",
     "uuid": "8.3.2",
-    "moment-timezone": "0.5.40"
+    "moment-timezone": "0.5.40",
+    "@ethersproject/bignumber": "5.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.4",
