suhail - updated new issuance package and invoking using new update

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -23,12 +23,13 @@
     "prettier": "prettier --write --config-precedence file-override './src/**/*'",
     "lint": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --no-error-on-unmatched-pattern",
     "lint:fix": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
-    "migrate": "yarn typeorm:run:issuer && yarn typeorm:run",
+    "migrate": "yarn typeorm:run:issuer && yarn typeorm:run && yarn typeorm:run:certificate",
     "migrate:docker": "yarn typeorm:run:issuer && node_modules/typeorm/cli.js --config dist/js/ormconfig.js migration:run",
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --config ormconfig-dev.ts",
     "typeorm:migrate": "yarn typeorm migration:generate -- -n",
     "typeorm:run": "yarn typeorm migration:run",
     "typeorm:run:issuer": "node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
+    "typeorm:run:certificate": "node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
     "typeorm:drop": "yarn typeorm schema:drop",
     "typeorm:drop:issuer": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
     "typeorm:dropAndMigrate": "yarn typeorm:drop && yarn typeorm:run",
@@ -43,9 +44,9 @@
   },
   "dependencies": {
     "@energyweb/energy-api-influxdb": "0.8.0",
-    "@energyweb/issuer": "4.1.1-alpha.1634225870.0",
+    "@energyweb/issuer": "7.0.1",
     "@energyweb/issuer-api": "0.4.1-alpha.1634225870.0",
-    "@energyweb/origin-247-certificate": "2.1.2",
+    "@energyweb/origin-247-certificate": "4.1.2",
     "@energyweb/origin-backend": "11.0.2-alpha.1634225870.0",
     "@energyweb/origin-backend-core": "8.0.4-alpha.1634225870.0",
     "@energyweb/origin-backend-utils": "1.6.2-alpha.1634225870.0",
