--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -43,6 +43,7 @@
     "drec-backend": "./bin/drec-api"
   },
   "dependencies": {
+    "@mapbox/timespace":"2.0.4",
     "@energyweb/energy-api-influxdb": "0.8.0",
     "@energyweb/issuer": "7.0.1",
     "@energyweb/issuer-api": "0.4.1-alpha.1634225870.0",
