--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -103,7 +103,10 @@
     "uuid": "8.3.2",
     "moment-timezone": "0.5.40",
     "@ethersproject/bignumber": "5.3.0",
-    "crypto-js":"4.1.1"
+    "crypto-js":"4.1.1",
+    "passport-http-bearer":"1.0.1",
+    "passport-oauth2-client-password":"0.1.2",
+    "passport-strategy": "1.x.x"
 
   },
   "devDependencies": {
