--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -103,7 +103,8 @@
     "uuid": "8.3.2",
     "moment-timezone": "0.5.40",
     "@ethersproject/bignumber": "5.3.0",
-    "crypto-js":"4.1.1"
+    "crypto-js":"4.1.1",
+    "jsonwebtoken":"9.0.1"
 
   },
   "devDependencies": {
