--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -130,6 +130,8 @@
     "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "@typescript-eslint/parser": "3.10.1",
+    "@types/passport-oauth2-client-password":"0.1.2",
+    "@types/passport-strategy":"0.2.35",
     "chai": "4.2.0",
     "eslint": "7.15.0",
     "eslint-config-airbnb-base": "14.2.1",
