--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -43,7 +43,6 @@
     "drec-backend": "./bin/drec-api"
   },
   "dependencies": {
-    "@mapbox/timespace": "2.0.4",
     "@energyweb/energy-api-influxdb": "0.8.0",
     "@energyweb/issuer": "7.0.1",
     "@energyweb/issuer-api": "0.4.1-alpha.1634225870.0",
@@ -52,7 +51,9 @@
     "@energyweb/origin-backend-core": "8.0.4-alpha.1634225870.0",
     "@energyweb/origin-backend-utils": "1.6.2-alpha.1634225870.0",
     "@energyweb/utils-general": "11.0.5-alpha.1634225870.0",
+    "@ethersproject/bignumber": "5.3.0",
     "@influxdata/influxdb-client": "1.9.0",
+    "@mapbox/timespace": "2.0.4",
     "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/axios": "~0.0.3",
     "@nestjs/bull": "0.4.2",
@@ -73,6 +74,7 @@
     "class-validator": "0.13.1",
     "clean-deep": "3.4.0",
     "concurrently": "5.3.0",
+    "crypto-js": "4.1.1",
     "csv-parse": "^5.1.0",
     "csv-parser": "^3.0.0",
     "csvtojson": "2.0.1",
@@ -81,9 +83,11 @@
     "form-data": "~4.0.0",
     "ganache-cli": "6.12.2",
     "handlebars": "^4.7.7",
+    "jsonwebtoken": "^9.0.1",
     "lodash": "4.17.21",
     "luxon": "1.27.0",
     "moment": "2.29.4",
+    "moment-timezone": "0.5.40",
     "multer": "1.4.2",
     "nanoid": "~3.1.30",
     "nodemailer": "^6.6.3",
@@ -100,11 +104,7 @@
     "stream": "^0.0.2",
     "swagger-ui-express": "4.1.6",
     "typeorm": "0.2.41",
-    "uuid": "8.3.2",
-    "moment-timezone": "0.5.40",
-    "@ethersproject/bignumber": "5.3.0",
-    "crypto-js": "4.1.1",
-    "jsonwebtoken": "9.0.1"
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.4",
