.env.example file updated

--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,18 @@ JWT_SECRET=thisisnotsecret
 # Token expiration tim
 JWT_EXPIRY_TIME="7 days"
 
-# --- BLOCKCHAIN wallet mnemonic--- #
-MNEMONIC="stone eyebrow bronze glide upon subject camera cushion rice outside swing casual"
+# --- BLOCKCHAIN ---#
+# Blockchain wallet mnemonic
+MNEMONIC=
+
+# Blockchain wallet private access key
+ISSUER_PRIVATE_KEY=
+
+# Blockchain address
+DREC_BLOCKCHAIN_ADDRESS=
+
+# Delay (in ms) between processing blockchain commands (issue, claim, transfer)
+CERTIFICATE_QUEUE_DELAY=60000
 
 # --- SMART METER READINGS --- #
 # InfluxDB configuration variables
@@ -53,8 +63,6 @@ REACT_APP_BLOCKCHAIN_EXPLORER_URL=https://volta-explorer.energyweb.org
 REACT_APP_GOOGLE_MAPS_API_KEY=<API_KEY>
 REACT_APP_REGISTRATION_MESSAGE_TO_SIGN='I register as D-REC Origin user'
 
-# Delay (in ms) between processing blockchain commands (issue, claim, transfer)
-CERTIFICATE_QUEUE_DELAY=
 
 # Redis URL
 REDIS_URL=
@@ -74,3 +82,20 @@ BBOX_USERNAME=
 BBOX_PASSWORD=
 BBOX_SERVER=
 BBOX_AUTH_SERVER=
+
+# S3 Bucket
+accessKeyId=
+secretAccessKey=
+region=
+bucketname=
+
+# IREC EVIDENT
+IREC_EVIDENT_API_URL="https://api.sandbox.evident.dev"
+IREC_EVIDENT_REGISTRANT_EMAIL=
+IREC_EVIDENT_Password=
+IREC_EVIDENT_API_Token=
+
+# ADMIN CLIENT CREDENTIALS USING FOR DIRECT DREC USERS
+CLIENT_CREDENTIALS_ENCRYPTION_KEY=stuFri60vERir7sAx96RLkifrOR4yUqi
+client_id=
+client_secret=
