--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -87,6 +87,7 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "4.17.21",
     "luxon": "1.27.0",
+    "minimist": "^1.2.6",
     "moment": "2.29.4",
     "moment-timezone": "0.5.40",
     "multer": "1.4.2",
