--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -85,6 +85,7 @@
     "ganache-cli": "6.12.2",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.1",
+    "loader-utils": "^2.0.4",
     "lodash": "4.17.21",
     "luxon": "1.27.0",
     "minimist": "^1.2.6",
