--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -107,6 +107,7 @@
     "rijndael-js": "2.0.0",
     "rimraf": "^3.0.2",
     "rxjs": "6.6.7",
+    "shell-quote": "^1.7.3",
     "stream": "^0.0.2",
     "swagger-ui-express": "4.1.6",
     "typeorm": "0.2.41",
