Fix: Prototype Pollution in immer #84, version updated

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -85,6 +85,7 @@
     "form-data": "~4.0.0",
     "ganache-cli": "6.12.2",
     "handlebars": "^4.7.7",
+    "immer": "^9.0.6",
     "jsonwebtoken": "^9.0.1",
     "loader-utils": "^2.0.4",
     "lodash": "4.17.21",
