--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -113,6 +113,7 @@
     "stream": "^0.0.2",
     "swagger-ui-express": "4.1.6",
     "typeorm": "0.2.41",
+    "uglify-js": "2.6.0",
     "underscore": "^1.12.1",
     "uuid": "8.3.2",
     "webpack": "^5.76.0"
